# opengl_tasks_2020

./: .gitignore  CMakeLists.txt  CMakeSettings.json
cmake/: MacroUtils.cmake
task2/: CMakeLists.txt  ShaderProgram.hpp  Surface.cpp
task2/common/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  ConditionalRender.cpp  ConditionalRender.h  Framebuffer.cpp  Framebuffer.hpp  Mesh.cpp  Mesh.hpp  QueryObject.cpp  QueryObject.h  SkinnedMesh.cpp  SkinnedMesh.h  Texture.cpp  Texture.hpp  Utils.h
